--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,20 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Node
 node_modules/
 dist/
+
+# Python
 __pycache__/
+*.pyc
+.venv/
+
+# Env
 .env
-test.db
+.env.*
+backend/.env
+backend/.env.*
+
+# Database
+*.db
+
+# OS
+.DS_Store
